Bug 236475 - Fields truncated in overdue schedules dialogue
Summary: Fields truncated in overdue schedules dialogue
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-05 21:15 UTC by David Houlden
Modified: 2012-01-13 06:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of truncated fields. (43.08 KB, image/jpeg)
2010-05-05 21:16 UTC, David Houlden
Details
Screenshot requested by Alvaro (47.09 KB, image/jpeg)
2010-05-10 11:19 UTC, David Houlden
Details
Screnshot of too wide a layout (10.92 KB, image/png)
2011-10-20 11:35 UTC, Frank Steinmetzger
Details
Proposed patch (1.33 KB, patch)
2012-01-12 18:57 UTC, Cristian Oneț
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2010-05-05 21:15:03 UTC
Version:           SVN 1123261 (using KDE 4.3.5)
OS:                Linux
Installed from:    Compiled From Sources

When I started kmymoney I had an overdue schedule. I got the dialog asking me to "check that all details in the following dialogue are correct and press OK". When the next dialogue came up with the transaction details, The account, pay to, category and memo fields are too narrow. I will post a screenshot.
Comment 1 David Houlden 2010-05-05 21:16:02 UTC
Created attachment 43278 [details]
Screenshot of truncated fields.
Comment 2 Jack 2010-05-06 01:04:13 UTC
In retrospect, I realize I just saw the same behavior.  It's as if the default size for the dialog was set at some absolute value which is too small, instead of letting things default to wide enough to show the contents.  A larger default width would probably also fix it.  Manually dragging the dialog wider lets the fields be viewed correctly.
Comment 3 Alvaro Soliverez 2010-05-06 01:34:54 UTC
Do you see that every time or only in the Enter schedule dialog that shows up on start up?
I tried the regular Enter schedule for several different items and the layout is just fine here.
Comment 4 David Houlden 2010-05-06 02:12:07 UTC
I see this problem whenever that dialog shows up not just at start up. I have found that after the dialog pops up, resizing it in any direction, making it larger or smaller resizes those fields so they are no longer truncated.
Comment 5 Alvaro Soliverez 2010-05-06 02:26:27 UTC
I commited a change that might help with this.

It's revision 1123388. Can you confirm later if that helps?
Comment 6 Jack 2010-05-06 02:45:54 UTC
I just noticed that when the dialog opens, there is a bunch of extra space to the right of the right column of fields.  Once I resize the dialog, even if I just wiggle the width, that blank space disappears, the right column of fields moves to the right, and the left column expands to be large enough to see the contents.  Hopefully that fits with what you just fixed.

However, I've updated svn: At revision 1123399, but running the app shows Version 3.97.2-svn1117032, which doesn't fix the problem, but I've obviously got some problem in my build.
Comment 7 Thomas Baumgart 2010-05-06 08:16:01 UTC
Regarding the version number: you need to run "cmake <path-to-source-dir>" to update the version number. Looks like the last source changes did not trigger the cmake run so you need to do it manually to update the revision number.
Comment 8 David Houlden 2010-05-06 10:11:30 UTC
Now updated to SVN 1123562 but still seeing the same problem.
Comment 9 Alvaro Soliverez 2010-05-07 16:14:56 UTC
What's your screen resolution?
I'm running on 1960x1024, perhaps that's why I don't see the problem.
Comment 10 Jack 2010-05-07 16:58:49 UTC
I'm running 1680x1050 on my desktop, and running remotely from my laptop at 1366x768 I get the same behavior.
Comment 11 David Houlden 2010-05-07 17:50:03 UTC
(In reply to comment #9)
> What's your screen resolution?
> I'm running on 1960x1024, perhaps that's why I don't see the problem.

1024x768 here.
Comment 12 Cristian Oneț 2010-05-08 14:05:02 UTC
Alvaro an I have KDE 4.4 and we can't reproduce this so it could be that it only happens on KDE 4.3. Thomas can you reproduce this? AFAIK you are still running 4.3.
Comment 13 Thomas Baumgart 2010-05-08 16:20:15 UTC
Yes, it's right there. I'll take a look into it and see what I can do.
Comment 14 Thomas Baumgart 2010-05-08 18:18:54 UTC
Ok, weird stuff. I saw the problem and was able to reproduce it. Then 'out of a sudden' it disappeared and everything showed up correctly.

I was able to trace it back to the fact, that I had turned on the "Don't show again" checkmark on the info dialog that pops up when you select the 'Enter schedule' action. The next time one starts entering a scheduled transaction, the info dialog is not shown and the enter schedule dialog comes up correct.

David, Jack: can you duplicate this?

Alvaro: can you make it fail by turning the message on or do you see it anyway? You can turn it back on by removing the second line of

 [Notification Messages]
 EnterScheduleDlgInfo=false

in ~/.kde4/share/config/kmymoneyrc
Comment 15 David Houlden 2010-05-08 21:47:12 UTC
(In reply to comment #14)

> David, Jack: can you duplicate this?
> 

Yes. I see exactly the same as Thomas described.
Comment 16 Alvaro Soliverez 2010-05-08 22:24:02 UTC
Yes, I was able to make it fail that way.
Comment 17 Jack 2010-05-08 22:36:40 UTC
I get the same behavior.  Does that info lead any closer to an explanation of why?
Comment 18 Alvaro Soliverez 2010-05-09 02:44:50 UTC
SVN commit 1124375 by asoliverez:

Being able to reproduce the issue, it was just a matter of beating my head long enough trying different solutions until I found that the resize for the first column values was missing and I wondered why.
Later on, we'll have to check if the resize can be performed better with a QBoxLayour or a QGrid.

BUG:236475

 M  +2 -0      transactionform.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1124375
Comment 19 David Houlden 2010-05-09 14:33:33 UTC
This still isn't quite right for me. When the enter schedule dialog opens, I get vertical and horizontal scroll bars and the fields do not fit in the dialog. If I drag the dialog bigger then back to its original size the fields now fit and the scroll bars go away.
Comment 20 Jack 2010-05-09 17:19:12 UTC
Interesting.  It now works OK for me.  The starting size for the dialog is good, and there seems to be a minimum size I can shrink it to, which is too small to see enough of the field values, but still doesn't get scroll bars.

I wonder if this difference is due to screen resolution - although 1024 seems like it should be enough.
Comment 21 David Houlden 2010-05-10 11:19:55 UTC
Created attachment 43424 [details]
Screenshot requested by Alvaro

This is how the dialog opens for me. Note the scroll bars. As before, it opens ok with no scroll bars if I suppress the first dialog by selecting "Don't show this again".
Comment 22 Alvaro Soliverez 2010-07-23 11:39:52 UTC
Does this still happen with the latest SVN? I still cannot reproduce it.
Comment 23 David Houlden 2010-07-23 12:05:12 UTC
(In reply to comment #22)
> Does this still happen with the latest SVN? I still cannot reproduce it.

Yes. It's still happening as I described in comment #21
Comment 24 Jack 2010-07-23 14:58:16 UTC
Works OK for me at svn 1153178, KDE 4.4.4.  With or without showing the info dialog, I cannot make it show scrollbars.   Is it possible for something like theme or compositing to affect this?
Comment 25 Alvaro Soliverez 2010-07-23 15:14:39 UTC
David, are you still using KDE 4.3.5? What is your Qt version?
Perhaps we have hit a bug in the toolkit.

Also, does this happen both when entering schedules on startup and when you enter them manually?
Comment 26 David Houlden 2010-07-23 15:39:47 UTC
(In reply to comment #25)
> David, are you still using KDE 4.3.5? What is your Qt version?
> Perhaps we have hit a bug in the toolkit.
> 
The versions have moved on since I reported this. Now running SVN1153529 on KDE 4.4.5 with QT 4.6.3.

> Also, does this happen both when entering schedules on startup and when you
> enter them manually?
Yes. It happens in both cases.
Comment 27 David Houlden 2010-07-23 19:03:16 UTC
This bug does seem to be related to the screen resolution. On my laptop I have it set to 1024*768 and I get the scroll bars as described earlier. I cannot increase the resolution, that's as high as it will go, but if I decrease it to 800*600 the scroll bars are not displayed. Hope that gives someone a clue.
Comment 28 Alvaro Soliverez 2010-07-25 02:18:56 UTC
Can someone running at 1024*768 confirm the problem?
Comment 29 Jack 2010-07-25 02:51:58 UTC
Now I'm more confused.  I still do NOT get the scrollbars on my main machine at 1680x1050, but I do get the scrollbars at 1024x768 and 1280x1024 on a different machine (actually running on my box by ssh) and on my laptop at 1366x768.  Resizing the window at all removes the scrollbars.
Comment 30 Alvaro Soliverez 2010-08-01 17:35:15 UTC
On those machines that do have the problem, what are the video drivers?

I tried running at 1024x768 and 1280x1240 and it works fine here. I have an ATI with the latest catalyst drivers.
Comment 31 David Houlden 2010-08-01 18:53:01 UTC
lspci returns this -
01:00.0 VGA compatible controller: S3 Inc. SuperSavage IX/C SDR (rev 05)

Using this driver according to X.Org log -
SAVAGE: driver (version 2.3.1) for S3 Savage chipsets
Comment 32 Jack 2010-08-01 21:16:17 UTC
My good machine has the nvidia driver.  The laptop is also nvidia,  The other desktop has the sis driver.  Unfortunately (?), they all work OK today.  In all cases, the dialog comes up larger than it used to, with no scroll bars.  There seems to be a minimum height, but not a minimum width, and I can resize the dialog narrow enough that scroll bars are shown.  My current version is svn 1156856.
Comment 33 David Houlden 2010-08-01 21:47:13 UTC
I just tried going back to 1156856 same as Jack but I still get the scroll bars.
Comment 34 Cristian Oneț 2010-08-11 19:41:39 UTC
I can't reproduce this anymore. Even with the initial 'EnterScheduleDlg' message on the dialog shows up correctly.
Comment 35 David Houlden 2010-08-12 12:18:53 UTC
Just did a complete uninstall of kmymoney and the source code. Did a new checkout from svn (1162605), built from the new source and installed. I am still seeing the scroll bars. Is it just me now? Please let me know if there is anything I can do to help track this down.
Comment 36 allan 2010-08-12 19:44:37 UTC
(In reply to comment #35)
> Just did a complete uninstall of kmymoney and the source code. Did a new
> checkout from svn (1162605), built from the new source and installed. I am
> still seeing the scroll bars. Is it just me now? Please let me know if there is
> anything I can do to help track this down.

As you've replaced most things, what about the rc file schedule settings?
Comment 37 David Houlden 2010-08-12 21:28:03 UTC
(In reply to comment #36)
> As you've replaced most things, what about the rc file schedule settings?

OK. Not sure what you want me to try but I renamed my kmymoneyrc file, started kmymoney which came up like I was using it for the first time and I still get the scroll bars.
Comment 38 David Houlden 2010-12-04 12:42:30 UTC
I am now using SVN1203411 on KDE 4.5.3. Today I noticed that the problem has gone away. I no longer see the scroll bars. I have no idea at what point in the last 4 months this happened but if no one else has the problem then this bug can be closed.
Comment 39 David Houlden 2011-03-27 19:23:15 UTC
Unfortunately this problem has started happening again. Today I manually entered a schedule by clicking "Enter Schedule" on the home page. I got the dialog asking me to check details in the following dialog, clicked OK and when the Enter Schedule dialog appeared, the scroll bars were present exactly as before. 

This is happening on two machines, both running SVN 1226199 and KDE 4.5.5. The laptop has a screen resolution of 1280x800 and the desktop is 1280x1024.
Comment 40 Cristian Oneț 2011-05-22 20:29:18 UTC
I've just revisited this one:
- SVN trunk
- KDE 4.6.3
- Qt 4.7.2
- 'EnterScheduleDlg' true
The dialog shows up correctly. Could you guys check it again?
Comment 41 David Houlden 2011-05-22 21:00:30 UTC
Cristian, first of all, did you mean EnterScheduleDlgInfo=true ? 

SVN trunk
KDE 4.5.5
Qt 4.7.0
With EnterScheduleDlgInfo=true I get the scroll bars.
With EnterScheduleDlgInfo=false I don't get scroll bars.
Comment 42 Cristian Oneț 2011-05-22 21:29:48 UTC
(In reply to comment #41)
> Cristian, first of all, did you mean EnterScheduleDlgInfo=true ? 
Yes.
> 
> SVN trunk
> KDE 4.5.5
> Qt 4.7.0
> With EnterScheduleDlgInfo=true I get the scroll bars.
> With EnterScheduleDlgInfo=false I don't get scroll bars.

Can anyone with KDE 4.6 confirm this?
Comment 43 Thomas Baumgart 2011-09-28 18:57:13 UTC
Any news on this one?
Comment 44 David Houlden 2011-09-28 19:22:01 UTC
Yes, I still have the same problem as reported in comment #39. Now running svn1255666.
Comment 45 Frank Steinmetzger 2011-10-20 11:35:15 UTC
Created attachment 64732 [details]
Screnshot of too wide a layout

I have a similar problem in the same dialogue, though not for scheduled transactions, but for simple new entries I want to make in my “pocket change” account.

At the bottom of the account’s ledger, the three tabs “Deposit”, “Transfer” and “Withdrawal” are so wide that they don’t even fit on my 1400 horizontal pixels. I can’t reach the amount field in maximised state, and when I un-maximise the window, it becomes almost 1800 pixels wide (the screenshot is a Gimp job from two images, I can’t resize the window to be thinner than depicted).

That’s a new bug in 4.6.0 which wasn’t there in 4.5.3. Running KDE 4.7.2 at the moment, all packages installed via Gentoo’s portage.
Comment 46 Jack 2011-10-20 12:56:23 UTC
4.6.0 works fine for me on Gentoo, I don't see either problem.  It probably shouldn't matter, but what USE flags do you have for KMM?  I have handbook, ofx, quotes, with all others off.
Comment 47 Cristian Oneț 2011-10-24 10:09:34 UTC
(In reply to comment #45)
> Created an attachment (id=64732) [details]
> Screnshot of too wide a layout
> 
> I have a similar problem in the same dialogue, though not for scheduled
> transactions, but for simple new entries I want to make in my “pocket change”
> account.
> 
> At the bottom of the account’s ledger, the three tabs “Deposit”, “Transfer” and
> “Withdrawal” are so wide that they don’t even fit on my 1400 horizontal pixels.
> I can’t reach the amount field in maximised state, and when I un-maximise the
> window, it becomes almost 1800 pixels wide (the screenshot is a Gimp job from
> two images, I can’t resize the window to be thinner than depicted).
> 
> That’s a new bug in 4.6.0 which wasn’t there in 4.5.3. Running KDE 4.7.2 at the
> moment, all packages installed via Gentoo’s portage.

Can't you just make the windows smaller or resize isn't working? I find it hard to believe that the minimum with of the application would be 1800 pixels. This would be a bug too big to be missed by anyone or maybe I've misunderstood your report.
Comment 48 Cristian Oneț 2012-01-06 13:12:58 UTC
Anyone seen this recently?
Comment 49 David Houlden 2012-01-06 16:36:08 UTC
I'm still seeing the scroll bars on the dialog as previously reported. They disappear as soon as I resize the dialog smaller or larger.
Comment 50 Cristian Oneț 2012-01-06 18:19:56 UTC
(In reply to comment #49)
> I'm still seeing the scroll bars on the dialog as previously reported. They
> disappear as soon as I resize the dialog smaller or larger.

Ok, then I'll re-try to fix this.
Comment 51 Cristian Oneț 2012-01-12 18:57:26 UTC
Created attachment 67748 [details]
Proposed patch

Since I can't reproduce this could you test this patch? 

I suspect that the problem is caused by the fact that the dialog's initial size adjustment is performed before the size adjustment of the contained transaction form (also executed on the event loop) is done.

The proposed patch tries to fix this.
Comment 52 David Houlden 2012-01-12 21:10:03 UTC
Patch applied and problem fixed. Many thanks Cristian.
Comment 53 Cristian Oneț 2012-01-13 06:10:59 UTC
Git commit 448bb4b8690279dd747eb49446ea38337b2bfb59 by Cristian Oneț.
Committed on 13/01/2012 at 07:08.
Pushed by conet into branch 'master'.

M  +3    -3    kmymoney/dialogs/kenterscheduledlg.cpp

http://commits.kde.org/kmymoney/448bb4b8690279dd747eb49446ea38337b2bfb59
Comment 54 Cristian Oneț 2012-01-13 06:11:33 UTC
Git commit b7a5bb87377e4f15a1cbbd4704516a6961ac3f1f by Cristian Oneț.
Committed on 13/01/2012 at 07:08.
Pushed by conet into branch '4.6'.
(cherry picked from commit 448bb4b8690279dd747eb49446ea38337b2bfb59)

M  +3    -3    kmymoney/dialogs/kenterscheduledlg.cpp

http://commits.kde.org/kmymoney/b7a5bb87377e4f15a1cbbd4704516a6961ac3f1f