Being able to reproduce the issue, it was just a matter of beating my head long enough trying different solutions until I found that the resize for the first column values was missing and I wondered why. Later on, we'll have to check if the resize can be performed better with a QBoxLayour or a QGrid.

BUG:236475

svn path=/trunk/playground/office/kmymoney/; revision=1124375